api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/filmsitemaster_webappnetwork: "true"
        io.kompose.service: api
    spec:
      containers:
      - image: webapp-api
        name: api
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /server
          name: api-claim0
        - mountPath: /server/node-modules
          name: api-claim1
        - mountPath: /server/videos
          name: api-claim2
        - mountPath: /server/poster
          name: api-claim3
      restartPolicy: Always
      volumes:
      - name: api-claim0
        persistentVolumeClaim:
          claimName: api-claim0
      - name: api-claim1
        persistentVolumeClaim:
          claimName: api-claim1
      - name: api-claim2
        persistentVolumeClaim:
          claimName: api-claim2
      - name: api-claim3
        persistentVolumeClaim:
          claimName: api-claim3
status: {}
