filmsitemaster_webappnetwork-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: filmsitemaster_webappnetwork
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/filmsitemaster_webappnetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/filmsitemaster_webappnetwork: "true"
